--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,4 +1,37 @@
 .list {
     list-style-type: none;
     font-size: 18px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    padding: 15px;
+    margin: 0;
+}
+
+.text {
+    border: 2px solid #333333;
+    border-top: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 20px;
+    margin: 0;
+    padding: 15px;
+    font-size: 30px;
+    background-color: #333333;
+    width: 500px;
+    display: inline-block;
+    height: 110px;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+.text:hover {
+    text-shadow: 0 0 20px #646cff;
+}
+
+.item {
+    width: 500px;
+}
+
+.img {
+    margin-bottom: -6px;
 }
