--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,7 @@
 .active {
     color: azure;
     border: 1px solid #646cff;
+    text-shadow: 0 0 10px azure;
     border-radius: 8px;
 }
 
@@ -8,7 +9,12 @@
     padding: 10px;
 }
 
+.link:hover {
+    text-shadow: 0 0 10px #535bf2;
+}
+
 .active:hover {
+    text-shadow: 0 0 10px azure;
     color: azure;
 }
 
@@ -17,5 +23,6 @@
     gap: 20px;
     justify-content: center;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 50px;
+    margin-bottom: 35px;
 }
