--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -4,11 +4,16 @@
     list-style-type: none;
     justify-content: center;
     padding: 0;
+    font-size: 20px;
 }
 
 .title {
     font-size: 50px;
     margin: 0;
+}
+
+.img {
+    border: 10px solid beige;
 }
 
 .wrapper {
@@ -20,8 +25,8 @@
     position: relative;
     & a {
         position: absolute;
-        margin-bottom: 140px;
-        margin-right: 400px;
+        margin-bottom: 250px;
+        margin-right: 500px;
         font-size: 20px;
         border-radius: 8px;
         border: 1px solid #646cff;
@@ -31,4 +36,34 @@
         text-shadow: 0 0 5px #646cff;
         box-shadow: 0 0 5px #646cff;
     }
+}
+
+.div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap: 150px;
+    & ul, p {
+        margin: 0;
+    }
+    & h3 {
+        margin: 0;
+        font-size: 26px;
+    }
+}
+
+.genres {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 10px;
+}
+
+.overviewTitle {
+    font-size: 36px;
+}
+
+.overviewText {
+    font-size: 20px;
 }
