--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url('./images/background-1.jpg');
+  background-repeat: repeat;
+  background-size: contain;
 }
 
 h1 {
