--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -7,6 +7,14 @@
     font-size: 20px;
 }
 
+.genresUl {
+    display: flex;
+    gap: 10px;
+    list-style-type: none;
+    padding: 0;
+    font-size: 24px;
+}
+
 .title {
     font-size: 50px;
     margin: 0;
@@ -56,8 +64,11 @@
 .genres {
     display: flex;
     justify-content: center;
-    align-items: baseline;
+    flex-direction: column;
     gap: 10px;
+    & p {
+        font-size: 24px;
+    }
 }
 
 .overviewTitle {
@@ -65,5 +76,5 @@
 }
 
 .overviewText {
-    font-size: 20px;
+    font-size: 24px;
 }
